--- a/spring-learn/pom.xml
+++ b/spring-learn/pom.xml
@@ -24,5 +24,17 @@
 <!--            <version>1.0-SNAPSHOT</version>-->
 <!--        </dependency>-->
 <!--    </dependencies>-->
+    <dependencies>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.vladsch.flexmark</groupId>
+            <artifactId>flexmark-all</artifactId>
+            <version>0.64.8</version>
+        </dependency>
+    </dependencies>
 
 </project>
